# y3-lnu

./: .gitmodules  README.md
2dt902/labs/: README.md
2dt902/labs/lab1/: README.md  feedback_P.txt
2dt902/labs/lab1/img/: .$component1.drawio.png.bkp  .$task3.drawio.png.bkp
2dt902/labs/lab2/: README.md
2dt902/labs/proj/: README.md  feedback_presentation.md
2dt903/docs/: ES sample questions .docx
2dt903/labs/FreeRTOS/: pythoncode.py
2dt903/labs/lab1/: 2DT903-assignment 1.docx  README.md  main.py  task2.py
2dt903/labs/lab2/: 2DT903-assignment 2.docx  README.md
2dt903/labs/lab2/c/: CMakeLists.txt  main.c
2dt903/labs/lab2/c/lib/Pico_dht/: dht_example.c
2dt904/assign/a1/: main.py  main.tex
2dt904/assign/a3/: README.md  datapoints.py  solar.py  visual.py
2dt904/labs/lab1/: README.md  lesson-lab1.py  template.py
2dt904/labs/lab2/: README.md  app.py  glslprogram.py  lesson-lab2.py  template.py
2dt904/labs/lab3/: 1-transformations-vs.glsl  1-transformations.py  README.md  app.py  glslprogram.py  matrix.py  meshes.py  varying-color-fs.glsl
2dt904/labs/template/: template.py
2dt905/computation/: bin_long_div.py  even_parity.py  num_spanning_trees.py  odd_parity.py  tcp_congestion.py
2dt905/example/: Query.java  README.txt  Request.java  Server.java  testa2u1.py
2dt905/example/public/: upload.html
2dt905/labs/lab1/: README.md
2dt905/labs/lab2/: Main.java  README.md  Server.py  test.py  testa2u1.py
2dt905/labs/lab3/: README.md
2dt906/assign/a1/: .env.key  compare_files.py  task3.py  task5.py  task6a.py  task6b.py  test.py
(+71 files in other folders)
